--- a/location.html
+++ b/location.html
@@ -20,7 +20,7 @@
 			<ul class="gnb-list">
 				<li class="gnb-tab"><a href="location.html"><span>위치</span></a></li>
 				<li class="gnb-tab"><a href="class.html"><span>수업</span></a></li>
-				<li class="gnb-tab"><a href="rental.html"><span>대여</span></a></li>
+				<li class="gnb-tab"><a href="rent.html"><span>대여</span></a></li>
 			</ul>
 			<div class="wave-tab"><a href="#"><span>속초 파도 LIVE</span>
 				<img src="images/common/dir.svg" alt="속초 파도 LIVE 보러가기">
