--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="container">
+	<section id="start" class="container">
 		<div class="container-title">
 			<span class="title-line"></span>
 			<p class="title">올 여름 필.수.클래스</p>
