--- a/location.html
+++ b/location.html
@@ -45,7 +45,7 @@
 			<p>펭귄서프클럽 위치안내</p>
 		</div>
 	</section>
-	<section class="container">
+	<section id="start" class="container">
 		<div class="container-title">
 			<span class="title-line"></span>
 			<p class="title">서울에서 1시간 20분!</p>
