--- a/rent.html
+++ b/rent.html
@@ -45,7 +45,7 @@
 			<p>장비 및 안전용품 대여</p>
 		</div>
 	</section>
-	<section class="container">
+	<section id="start" class="container">
 		<div class="search-wrapper">
 			<div class="search-title">
 				<p>대여가 필요한 날짜를<br>입력해주세요</p>
