--- a/class.html
+++ b/class.html
@@ -47,7 +47,7 @@
 			<p>서핑&패들보드&수상스키</p>
 		</div>
 	</section>
-	<section class="container">
+	<section id="start" class="container">
 		<div class="container-content">
 			<div class="icon-warpper">
 				<div class="icon-tab">
